# aigpt

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  DEVELOPMENT_STATUS.md  FIXED_MCP_TOOLS.md  LAYER1_REBUILD.md  QUICKSTART.md  README.md  TOML_MIGRATION.md  USAGE.md  ai.json  aishell.md  claude.json  claude.md  config.json  config.json.example  config.toml.example  example.json  gpt.json  pyproject.toml  readme.md  setup_venv.sh  test_shell_manual.sh  uv_setup.sh
.claude/: settings.local.json
.gitea/workflows/: release.yml
.github/workflows/: release.yml
ai_gpt/: .env.example  DEVELOPMENT_STATUS.md  README.md
ai_gpt/docs/: commands.md  concepts.md  quickstart.md
ai_gpt/src/ai_gpt/: config.py  fortune.py
aigpt-rs/: Cargo.toml  MIGRATION_STATUS.md  README.md
aigpt-rs/src/: ai_provider.rs  cli.rs  config.rs  conversation.rs  docs.rs  http_client.rs  import.rs  main.rs  mcp_server.rs  memory.rs  persona.rs  relationship.rs  scheduler.rs  shell.rs  submodules.rs  tokens.rs  transmission.rs
config/: config.json
docs/: AI_CARD_INTEGRATION.md  ARCHITECTURE.md  DOCS.md  README.md  README_CONFIG.md  ROADMAP.md  ai_card_mcp_integration_summary.md  ai_shell_integration_summary.md  claude-code-inception-methods.md  claude_code_config.json  claude_code_config_extended.json  claude_desktop_config.json  claude_desktop_config_extended.json  configuration.md  development.md  local-claude-code-setup.md  local-llm-recommendations.md  mcp-server-local-llm.py  mcp-server.md  mcp-setup-guide.md  scheduler.md
docs/archive/: DESIGN.md  QUICKSTART.md  README.old.md  STATUS.md  TECHNICAL_REVIEW.md  claude.md  test-mcp.sh
docs/archive/old-versions/: ARCHITECTURE.md.layer1  README.md.layer1
docs/shell_integration/: shell_tools.py
extended/src/: extended_mcp.rs  lib.rs  main.rs  mcp_server.rs
json/: chatgpt.json
mcp/: chat_client.py  chatgpt.json  chatgpt_converter.html  cli.py  config.py  requirements.txt  server.py  setup.py
mcp/scripts/: ask.py  config.py  context_loader.py  memory_store.py  prompt_template.py  server.py  summarize.py
python_backup/: pyproject.toml
python_backup/src/aigpt/: cli.py  mcp_server.py  memory.py  relationship.py  scheduler.py
python_backup/src/aigpt.egg-info/: SOURCES.txt  requires.txt
python_backup/src/aigpt/commands/: docs.py
python_backup/src/aigpt/docs/: __init__.py  git_utils.py  templates.py  utils.py
rust/: Cargo.toml
rust/mcp/: chat.py  config.py  memory_client.py  requirements.txt  server.py
rust/src/: main.rs
rust/src/mcp/: server.rs
scpt/: chatgpt.zsh  test_commands.sh  test_completion.sh  test_shell.sh
src/: agent.rs  ai_interpreter.rs  chat.rs  cli.rs  companion.rs  config.rs  docs.rs  game_formatter.rs  git.rs  http_client.rs  import.rs  lib.rs  logic.rs  main.rs  mcp.rs  mcp_server.rs  memory.rs  metrics.rs  model.rs  openai_provider.rs  persona.rs  relationship.rs  scheduler.rs  shell.rs  status.rs  submodules.rs  tokens.rs  transmission.rs  utils.rs
src/ai_gpt/: __init__.py  ai_provider.py  mcp_server.py  memory.py  models.py
src/aigpt/: ai_provider.py  card_integration.py  chatgpt_importer.py  cli.py  config.py  mcp_server.py  mcp_server_simple.py  models.py  persona.py  project_manager.py  transmission.py
src/aigpt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aigpt/commands/: submodules.py  tokens.py
src/aigpt/docs/: config.py  wiki_generator.py
src/aigpt/shared/: __init__.py  ai_provider.py
src/cli/: commands.rs  mod.rs
src/commands/: db.rs  git_repo.rs  mcp.rs  mod.rs  scheduler.rs
src/core/: analysis.rs  config.rs  error.rs  memory.rs  mod.rs  profile.rs  reader.rs  relationship.rs  store.rs  writer.rs
src/mcp/: base.rs  extended.rs  memory.rs  mod.rs  server.rs
src/tmp/: ai_interpreter.rs  extended.rs  game_formatter.rs  memory.rs
tmp/: data.rs  post.json  system.rs
tmp/agent/src/: main.rs
