[package]
name = "aigpt"
version = "0.1.0"
edition = "2021"
authors = ["syui"]
description = "Simple memory storage for Claude with MCP"


[[bin]]
name = "aigpt"
path = "src/main.rs"

[[bin]]
name = "memory-mcp"
path = "src/bin/mcp_server.rs"

[[bin]]
name = "memory-mcp-extended"
path = "src/bin/mcp_server_extended.rs"

[dependencies]
# CLI and async
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }

# JSON and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4"] }

# Error handling and utilities
anyhow = "1.0"
dirs = "5.0"

# Extended features (optional)
reqwest = { version = "0.11", features = ["json"], optional = true }
scraper = { version = "0.18", optional = true }

[features]
default = []
extended = ["web-integration"]
web-integration = ["reqwest", "scraper"]
