[package]
name = "aigpt"
version = "0.3.0"
edition = "2021"
authors = ["syui"]
description = "AI memory system with personality analysis and relationship inference - Layers 1-4 Complete"

[lib]
name = "aigpt"
path = "src/lib.rs"

[[bin]]
name = "aigpt"
path = "src/main.rs"

[dependencies]
# CLI and async
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros", "io-std"] }

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time and ULID
chrono = { version = "0.4", features = ["serde"] }
ulid = "1.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
dirs = "5.0"
