[package]
name = "aigpt"
version = "0.0.1"
edition = "2021"
authors = ["syui"]
description = "AI memory MCP server - read/write core.md and memory.md"

[lib]
name = "aigpt"
path = "src/lib.rs"

[[bin]]
name = "aigpt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
