[project]
name = "aigpt"
version = "0.1.0"
description = "Autonomous transmission AI with unique personality based on relationship parameters"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "typer>=0.9.0",
    "fastapi-mcp>=0.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "uvicorn>=0.23.0",
    "apscheduler>=3.10.0",
    "croniter>=1.3.0",
]

[project.scripts]
aigpt = "aigpt.cli:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aigpt = ["data/*.json"]